# agent-control-HITL

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Makefile  QUICKSTART.md  README.md  SETUP.md  TESTING.md  codecov.yml  docker-compose.yml  pyproject.toml  setup.sh
.githooks/: pre-push
.github/workflows/: ci.yml  docker-publish.yml  pr-title.yaml  release-sdk-ts.yml  release.yaml
docs/: OVERVIEW.md  README.md  REFERENCE.md  observability.md  testing.md
docs/plugins/: json.md
engine/: Makefile  README.md  pyproject.toml
engine/tests/: conftest.py  test_core.py  test_discovery.py  test_evaluator_integrations.py  test_evaluators.py  test_plugin_evaluators.py  test_selectors.py
evaluators/: README.md
evaluators/builtin/: Makefile  README.md  pyproject.toml
evaluators/contrib/: README.md
examples/: README.md  basic_usage.py  batch_processing.py  get_agent_example.py  init_with_tools.py  models_usage.py
examples/agent_control_demo/: README.md  agent_luna_demo.py  demo_agent.py  setup_controls.py  update_controls.py
examples/cisco_ai_defense/: setup_ai_defense_controls.py
examples/crewai/: README.md  content_agent_protection.py  pyproject.toml  setup_content_controls.py
examples/customer_support_agent/: README.md  demo.sh  run_demo.py  setup_demo_controls.py  support_agent.py
examples/deepeval/: README.md  pyproject.toml  qa_agent.py  setup_controls.py
examples/galileo/: README.md  luna2_demo.py  pyproject.toml
examples/google_adk_callbacks/: README.md  setup_controls.py
examples/google_adk_decorator/: README.md  setup_controls.py
examples/google_adk_plugin/: setup_controls.py
examples/langchain/: README.md  langgraph_auto_schema_agent.py  pyproject.toml  setup_sql_controls.py  sql_agent_protection.py  test_decorator.py
examples/steer_action_demo/: README.md  autonomous_agent_demo.py  setup_controls.py
examples/strands_agents/: README.md
examples/typescript_sdk/: README.md
models/: README.md  pyproject.toml
models/src/agent_control_models/: __init__.py  agent.py  controls.py  errors.py  evaluation.py  observability.py  policy.py  server.py
models/src/agent_protect_models/: __init__.py  base.py  health.py  policy.py  protection.py  server.py
models/tests/: test_controls.py
plugins/: README.md  pyproject.toml
scripts/: build.py
sdk/: README.md  pyproject.toml
sdk/src/agent_protect_sdk/: __init__.py  client.py
sdks/: README.md
sdks/python/: ARCHITECTURE.md  Makefile  README.md  REFACTORING_SUMMARY.md  pyproject.toml  pytest.ini
sdks/python/src/agent_control/: __init__.py  agents.py  client.py  control_decorators.py  controls.py  evaluation.py  observability.py  policies.py  settings.py  validation.py
sdks/python/src/agent_control/evaluators/: __init__.py  base.py
sdks/python/src/agent_control/integrations/strands/: README.md
sdks/python/src/agent_protect/: __init__.py
sdks/python/tests/: QUICK_START.md  README.md  conftest.py  test_agent_id_validation.py  test_client.py  test_control_decorators.py  test_evaluation.py  test_evaluators.py  test_init_conflict.py  test_init_step_merge.py  test_init_validation.py  test_integration_agents.py  test_integration_health.py  test_local_evaluation.py  test_luna2_plugin.py  test_luna2_smoke.py  test_observability.py  test_observability_updates.py  test_validation.py
sdks/typescript/: CHANGELOG.md  Makefile  README.md  RELEASING.md  package.json  pnpm-lock.yaml  (+1 more)
server/: .env.example  Dockerfile  Makefile  README.md  init_db.py  openapi.py  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 58920e6807fe_name_native_agent_identity_hard_cut.py  8a456eb97f5d_init.py  9f2f5a4e6c1b_normalize_legacy_control_conditions.py  a1b2c3d4e5f6_remove_control_sets.py  add_observability_tables.py  b7c9d8e1f2a3_add_evaluator_configs.py  ff13d775aa5a_merge_control_sets_removal_and_.py  simplify_observability_schema.py
server/src/agent_control_server/: __init__.py  auth.py  config.py  errors.py  main.py  models.py  ui_assets.py
server/src/agent_control_server/endpoints/: __init__.py  agents.py  controls.py  evaluation.py  evaluator_configs.py  evaluators.py  observability.py  policies.py  system.py
server/src/agent_control_server/observability/: __init__.py
server/src/agent_control_server/observability/ingest/: __init__.py  base.py  direct.py
server/src/agent_control_server/observability/store/: __init__.py  base.py  memory.py  postgres.py
server/src/agent_control_server/scripts/: __init__.py
server/src/agent_control_server/services/: agent_names.py  control_definitions.py  controls.py  evaluator_utils.py  schema_compat.py  validation_paths.py
server/src/agent_protect_server/: config.py  db.py  main.py  models.py
server/src/agent_protect_server/endpoints/: agents.py  controls.py  policies.py  protection.py  rules.py
server/src/agent_protect_server/services/: rules.py
server/tests/: conftest.py  test_agents_additional.py  test_auth.py  test_config.py  test_control_compatibility.py  test_control_condition_alembic_migration.py  test_controls.py  test_controls_additional.py  test_controls_validation.py  test_error_handling.py  test_errors_handlers.py  test_evaluation_e2e.py  test_evaluation_e2e_list_evaluator.py  test_evaluation_e2e_sql_evaluator.py  test_evaluation_error_handling.py  test_evaluator_configs.py  test_evaluator_schemas.py  test_evaluator_utils.py  test_init_agent.py  test_init_agent_conflict_mode.py  test_init_agent_force_replace.py  test_logging_utils.py  test_main_lifespan.py  test_metrics.py  test_new_features.py  test_observability_direct_ingest.py  test_observability_endpoints.py  test_observability_models.py  test_observability_store_memory.py  test_observability_store_postgres.py  test_policies.py  test_policy_integration.py  test_rules.py  test_services_controls.py  test_ui_assets.py  test_validation_paths.py  utils.py
server/unit_tests/: test_endpoint_helpers.py
ui/: .dockerignore  AGENTS.md  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml
(+117 files in other folders)
