[project]
name = "agent-protect-models"
version = "0.1.0"
description = "Shared data models for Agent Protect server and SDK"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
]
authors = [
    {name = "Agent Protect Team"}
]
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_protect_models"]

