[project]
name = "agent-protect-sdk"
version = "0.1.0"
description = "Python SDK for Agent Protect - interact with agent protection services"
requires-python = ">=3.11"
dependencies = [
    "agent-protect-models",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
]
authors = [
    {name = "Agent Protect Team"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["agent", "protection", "security", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/yourusername/agent-protect"
Documentation = "https://github.com/yourusername/agent-protect#readme"
Repository = "https://github.com/yourusername/agent-protect"

[tool.uv.sources]
agent-protect-models = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_protect_sdk"]
