[project]
name = "agent-protect-server"
version = "0.1.0"
description = "Server for Agent Protect - provide agent protection services via API"
requires-python = ">=3.11"
dependencies = [
    "agent-protect-models",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]
authors = [
    {name = "Agent Protect Team"}
]
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
agent-protect-server = "agent_protect_server.main:run"

[tool.uv.sources]
agent-protect-models = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_protect_server"]
