[project]
name = "agent-control-crewai-example"
version = "0.1.0"
description = "CrewAI content moderation example with Agent Control"
requires-python = ">=3.12"
dependencies = [
    "agent-control-sdk>=2.1.0,<3.0.0",
    "crewai>=0.80.0",
    "crewai-tools>=0.12.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "*.py",
    ".env.example",
]