[project]
name = "agent-control-deepeval-example"
version = "0.1.0"
description = "Agent Control DeepEval GEval Custom Evaluator Example"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepeval>=1.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "google-re2>=1.1",
    "agent-control-evaluators>=6.3.0",
    "agent-control-models>=6.3.0",
    "agent-control-sdk>=6.3.0",
]

[project.optional-dependencies]
dev = []

[project.entry-points."agent_control.evaluators"]
deepeval-geval = "evaluator:DeepEvalEvaluator"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
