[project]
name = "agent-control"
version = "0.1.0"
description = "Python SDK for Agent Control - unified agent control, monitoring, and rule enforcement"
requires-python = ">=3.12"
dependencies = [
    "agent-control-models>=0.1.0",
    "agent-control-engine>=0.1.0",  # For local evaluation
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "docstring-parser>=0.15",  # For @tool decorator schema inference
]
authors = [
    {name = "Agent Control Team"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["agent", "protection", "security", "sdk", "llm", "ai-safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/yourusername/agent-protect"
Documentation = "https://github.com/yourusername/agent-protect#readme"
Repository = "https://github.com/yourusername/agent-protect"

[project.optional-dependencies]
# Optional plugins - install separately as needed
luna2 = [
    "agent-control-plugins[luna2]",  # Galileo Luna-2 plugin
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_control"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["agent_control"]

[tool.uv.sources]
agent-control-models = { workspace = true }
agent-control-engine = { workspace = true }
agent-control-plugins = { workspace = true }
